banner changes done

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,5 +1,4 @@
-
-.main-header{
+.main-header {
   width: 100%;
   position: absolute;
   top: 0;
@@ -8,6 +7,7 @@
   padding: 15px 0;
   background-color: transparent;
 }
+
 .main-header .navbar .nav-item .dropdown-menu {
   display: block;
   border: none;
@@ -17,8 +17,9 @@
   visibility: hidden;
   transition: .5s;
 }
-.main-header .navbar .navbar-nav a{
-  color: var(--black);
+
+.main-header .navbar .navbar-nav a {
+  color: var(--white);
   font-weight: 500;
   font-size: 17px;
   margin-right: 35px;
@@ -26,10 +27,12 @@
   padding: 10px 0;
   line-height: 15px;
 }
-.main-header .navbar .navbar-nav a.active{
+
+.main-header .navbar .navbar-nav a.active {
   color: var(--primary-color);
 }
-.main-header .navbar .navbar-nav a::before{
+
+.main-header .navbar .navbar-nav a::before {
   position: absolute;
   content: "";
   width: 0;
@@ -39,13 +42,16 @@
   height: 0.1em;
   transition: 0.3s;
 }
-.main-header .navbar .navbar-nav a:hover::before{
+
+.main-header .navbar .navbar-nav a:hover::before {
   width: 100%;
   transition: 0.3s;
 }
-.main-header .navbar .navbar-nav a:nth-last-child(1){
+
+.main-header .navbar .navbar-nav a:nth-last-child(1) {
   margin-right: 0;
 }
+
 .main-header .navbar .nav-item:hover .dropdown-menu {
   top: 100%;
   visibility: visible;
