--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,60 +1,72 @@
-:root{
-  --paragraph-font : "Urbanist", sans-serif;
+:root {
+  --paragraph-font: "Urbanist", sans-serif;
   --heading-font: "Roboto Serif", serif;
-  --black:#000;
-  --white:#fff;
-  --primary-color:#2f3192;
-  --secondary-color:#a6cf39;
-  --common-padding:6% 0;
+  --black: #000;
+  --white: #fff;
+  --primary-color: #2f3192;
+  --secondary-color: #a6cf39;
+  --common-padding: 6% 0;
 }
 
-.custom-container{
+.custom-container {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   display: block;
 }
 
-.hero-section{
+.hero-section {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-image: url("../img/banner.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
-.hero-section h1{
+.hero-section h1 {
   font-family: var(--heading-font);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
   font-weight: 500;
 }
 
+.hero-section .main-banner .swiper-wrapper {
+  height: 100vh;
+}
+
+.hero-section .main-paginations {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translate(-50%, 0);
+  color: #fff;
+}
+
 /******************Home Hero Banner Css******************/
-.homepage-counter{
+.homepage-counter {
   width: 100%;
   background-color: var(--black);
   height: 80vh;
-  padding:var(--common-padding);
+  padding: var(--common-padding);
   display: flex;
   align-items: center;
 }
-.homepage-counter .counter-content h1{
+
+.homepage-counter .counter-content h1 {
   color: var(--white);
   font-family: var(--heading-font);
   font-size: 55px;
   line-height: 80px;
 }
-.homepage-counter .counter-content hr{
+
+.homepage-counter .counter-content hr {
   width: 35%;
   height: 3px;
   background-color: var(--white);
 }
-.homepage-counter .counter-content p{
+
+.homepage-counter .counter-content p {
   color: #a9a9a9;
   font-family: var(--paragraph-font);
   font-size: 18px;
@@ -62,6 +74,7 @@
   letter-spacing: 1px;
   margin-top: 55px;
 }
-.homepage-counter .main-counter{
+
+.homepage-counter .main-counter {
   color: var(--white);
 }
